--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 mining/static/VIDEOS/Frothmyvideo.mp4
 mining/data/MiningProcess_Flotation_Plant_Database.csv
+mining\static\VIDEOS\predictionvideo.mp4
