updated the dataset for more volatility

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 mining/static/VIDEOS/Frothmyvideo.mp4
 mining/data/MiningProcess_Flotation_Plant_Database.csv
-mining\static\VIDEOS\predictionvideo.mp4
+mining/data/combined_flotation_data_concatenated.csv
